adds context priorities and updates notebooks to test them

--- a/notebooks/heuristics.ipynb
+++ b/notebooks/heuristics.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:10.693880Z",
-     "start_time": "2020-08-15T19:31:10.272156Z"
+     "end_time": "2020-08-18T01:02:26.826057Z",
+     "start_time": "2020-08-18T01:02:26.802872Z"
     }
    },
    "outputs": [],
@@ -14,9 +14,9 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "\n",
-    "from src.sudoku import Sudoku\n",
+    "# from src.sudoku import Sudoku\n",
     "from src.time_utils import Timer\n",
-    "import src.solver as solver\n",
+    "# import src.solver as solver\n",
     "# import src.tester as tester\n",
     "import statistics as stat\n",
     "from scipy import stats as sci_stats"
@@ -24,26 +24,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:10.702034Z",
-     "start_time": "2020-08-15T19:31:10.695701Z"
+     "end_time": "2020-08-18T01:02:32.318730Z",
+     "start_time": "2020-08-18T01:02:32.292876Z"
     }
    },
    "outputs": [],
    "source": [
-    "import src.func_sudoku as func_sudoku\n",
-    "import src.func_solver as func_solver"
+    "import src.sudoku as sudoku\n",
+    "import src.solver as solver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 117,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:10.712989Z",
-     "start_time": "2020-08-15T19:31:10.704396Z"
+     "end_time": "2020-08-19T02:31:23.599360Z",
+     "start_time": "2020-08-19T02:31:23.571336Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import src.priorities as priorities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T01:02:32.362102Z",
+     "start_time": "2020-08-18T01:02:32.321227Z"
     }
    },
    "outputs": [],
@@ -53,14 +67,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:10.742919Z",
-     "start_time": "2020-08-15T19:31:10.715265Z"
+     "end_time": "2020-08-18T01:02:32.404373Z",
+     "start_time": "2020-08-18T01:02:32.367324Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -82,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:27.376080Z",
-     "start_time": "2020-08-15T19:31:27.346322Z"
+     "end_time": "2020-08-18T01:02:32.475640Z",
+     "start_time": "2020-08-18T01:02:32.410197Z"
     }
    },
    "outputs": [],
@@ -97,11 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 106,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:27.411077Z",
-     "start_time": "2020-08-15T19:31:27.377888Z"
+     "end_time": "2020-08-18T01:02:32.537844Z",
+     "start_time": "2020-08-18T01:02:32.488564Z"
     }
    },
    "outputs": [],
@@ -112,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 107,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:27.441340Z",
-     "start_time": "2020-08-15T19:31:27.412926Z"
+     "end_time": "2020-08-18T01:02:32.570854Z",
+     "start_time": "2020-08-18T01:02:32.541728Z"
     }
    },
    "outputs": [],
@@ -127,11 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 108,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T19:31:36.738561Z",
-     "start_time": "2020-08-15T19:31:36.716976Z"
+     "end_time": "2020-08-18T01:02:32.596488Z",
+     "start_time": "2020-08-18T01:02:32.572444Z"
     }
    },
    "outputs": [],
@@ -152,11 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 109,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T20:16:27.061602Z",
-     "start_time": "2020-08-15T20:16:27.030163Z"
+     "end_time": "2020-08-18T01:02:32.627133Z",
+     "start_time": "2020-08-18T01:02:32.603966Z"
     }
    },
    "outputs": [],
@@ -168,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T20:16:27.094200Z",
-     "start_time": "2020-08-15T20:16:27.063895Z"
+     "end_time": "2020-08-18T01:02:32.663914Z",
+     "start_time": "2020-08-18T01:02:32.628970Z"
     }
    },
    "outputs": [],
@@ -193,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 115,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T20:16:27.137783Z",
-     "start_time": "2020-08-15T20:16:27.096438Z"
+     "end_time": "2020-08-19T02:10:48.317048Z",
+     "start_time": "2020-08-19T02:10:48.270228Z"
     }
    },
    "outputs": [
@@ -225,11 +248,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T20:16:27.177619Z",
-     "start_time": "2020-08-15T20:16:27.143946Z"
+     "end_time": "2020-08-19T02:31:58.100243Z",
+     "start_time": "2020-08-19T02:31:58.074114Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorities.destructive(easy_game, 4, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-19T02:38:18.151257Z",
+     "start_time": "2020-08-19T02:38:18.102035Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.933333333333333"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorities.destructive_ratio(easy_game, 4, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T01:02:32.786180Z",
+     "start_time": "2020-08-18T01:02:32.724513Z"
     }
    },
    "outputs": [],
@@ -239,11 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 113,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T20:16:27.212866Z",
-     "start_time": "2020-08-15T20:16:27.181643Z"
+     "end_time": "2020-08-18T01:02:32.839073Z",
+     "start_time": "2020-08-18T01:02:32.788752Z"
     }
    },
    "outputs": [
@@ -253,7 +326,7 @@
        "dict_keys(['guesses', 'removes', 'solves', 'board', 'rows', 'cols', 'squares'])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,11 +337,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-15T20:16:27.242996Z",
-     "start_time": "2020-08-15T20:16:27.216166Z"
+     "end_time": "2020-08-18T01:02:32.891082Z",
+     "start_time": "2020-08-18T01:02:32.846048Z"
     }
    },
    "outputs": [],
